force-app/main/default/objects/Service_Presence_Status__mdt/Service_Presence_Status__mdt.object-meta.xml
<CustomObject>
    <label>Service Presence Status</label>
    <pluralLabel>Service Presence Statuses</pluralLabel>
</CustomObject>