force-app/main/default/objects/Service_Presence_Status__mdt/fields/Accepts_Work__c.field-meta.xml
<CustomField>
    <fullName>Accepts_Work__c</fullName>
    <label>Accepts Work</label>
    <defaultValue>false</defaultValue>
    <type>Checkbox</type>
</CustomField>