force-app/main/default/objects/Service_Presence_Status__mdt/fields/Capacity_Override__c.field-meta.xml
<CustomField>
    <fullName>Capacity_Override__c</fullName>
    <description>Temporarily caps capacity while in this status, e.g. 2 during training.</description>
    <label>Capacity Override</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>