force-app/main/default/objects/Service_Presence_Status__mdt/fields/Channels__c.field-meta.xml
<CustomField>
    <fullName>Channels__c</fullName>
    <description>Semicolon separated channels this status accepts. Blank means all channels.</description>
    <label>Channels</label>
    <length>255</length>
    <type>Text</type>
</CustomField>