force-app/main/default/objects/Service_Presence_Status__mdt/fields/Color__c.field-meta.xml
<CustomField>
    <fullName>Color__c</fullName>
    <description>CSS color for the console badge, e.g. #2e844a.</description>
    <label>Color</label>
    <length>20</length>
    <type>Text</type>
</CustomField>