force-app/main/default/objects/Service_Presence_Status__mdt/fields/Requires_Reason__c.field-meta.xml
<CustomField>
    <fullName>Requires_Reason__c</fullName>
    <label>Requires Reason</label>
    <defaultValue>false</defaultValue>
    <type>Checkbox</type>
</CustomField>