force-app/main/default/objects/Service_Presence_Status__mdt/fields/Sort_Order__c.field-meta.xml
<CustomField>
    <fullName>Sort_Order__c</fullName>
    <label>Sort Order</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
    <defaultValue>10</defaultValue>
</CustomField>